--- a/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.scss
@@ -32,7 +32,7 @@
              margin: 0.75em;
              display: flex;
              flex-direction: column;
-             gap: 1em;
+             
                 #text1 a {
                     font-weight: 500;
                     font-size: 1em;
@@ -51,7 +51,6 @@
                     display: flex;
                     flex-direction: row;
                     gap: 1em;
-                    height: 20%;
                     margin: 1em;
 
                 #cards {
@@ -63,7 +62,7 @@
                     flex-direction: row;
                     justify-content: space-between;
                     padding: 0.5em;
-
+                    padding-bottom: 0em;
                     p {
                         font-weight: 600;
                         font-size: 1.1em;
