--- a/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.scss
@@ -139,4 +139,26 @@ td {
     line-height: 1.375em;
     color: rgba(0, 0, 0, 0.85);
 }
+
 }
+.modal{
+    width: 25em;
+    height: 15em;
+    position: absolute;
+    left:40em;
+    top:5em;
+    text-align: center;
+    align-self: center;
+    border: 1em solid #DAFDFF;
+}
+.modal-content{
+    width: 25em;
+    align-items: center;
+    background-color: #FFF;
+    color: #1CB5BD;
+    padding-right:2em;
+    
+}
+// .modal-body{
+//     width: 20em;
+// }
