--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -55,7 +55,8 @@
                             background: #FFFFFF;
                             border: 0.1em solid #EAEBED;
                             border-radius: 0.4em;
-                            padding: 0.2em;
+                            padding: 0.5em;
+                            padding-bottom: 0em;
                             display: flex;
                             width: 100%;
                             flex-direction: row;
