--- a/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
@@ -72,6 +72,26 @@
                         </table>
                     </div>
                 </div>
+                <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Enter OTP</h4>
+                        </div>
+                        <div class="modal-body">
+                            <app-input name="uploadDate" (outputEmit)="otp=$event" [ipConfig]="ipConfig">
+                            </app-input>
+                            <br>
+                            <div class="modal-footer">
+                                <app-button [btntext]="'Verify'" [btnConfig]="textBtnConfig" (onClick)="Verifyotp()">
+                                </app-button>
+                                <app-button [btntext]="'Close'" [btnConfig]="textBtnConfig" (click)="closePopup()">
+                                </app-button>
+                            </div>
+
+                    
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
     </div>
