admin rows added

--- a/CHL-Frontend/src/app/components/admin/registered-doctors/registered-doctors.component.html
+++ b/CHL-Frontend/src/app/components/admin/registered-doctors/registered-doctors.component.html
@@ -13,7 +13,7 @@
             <app-input [ipConfig]="searchDoctorId"></app-input>
             <app-button id="search"[btnConfig]="searchBtnConfig2" [btntext]="'search'"></app-button>
             </div>
-          <div id="registered-doctors">In Progress</div>
+          <div id="registered-doctors">Registered Doctors</div>
           <div class="table-container">
             <table>
               <tr>
@@ -30,15 +30,15 @@
                 <td>{{doctor.qualification}}</td>
                 <td>{{doctor.speciality}}</td>
                 <td>{{doctor.phoneNo}}</td>
-                <td id="btn">
-                  <app-button (onClick)="onClickEventReceived($event, doctor.id, 'REGISTERED')" [btntext]="'Approve'" [btnConfig]="textBtnConfig "></app-button>
-                  <app-button (onClick)="onClickEventReceived($event, doctor.id,'TO_BE_REGISTERED')"  [btntext]="'Deny'" [btnConfig]="textBtnConfig3"></app-button>
+                <!-- <td>{{todo.targetDate | date}}</td> -->
+                <td>
+                  <app-button (onClick)="onClickEventReceived($event, doctor.id)" [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button>
                 </td>
             </tr>
-
+  
             </table>
           </div>
-
+  
         </div>
       </div>
     </div>
