admin rows added

--- a/CHL-Frontend/src/app/components/admin/admin-in-progress/admin-in-progress.component.html
+++ b/CHL-Frontend/src/app/components/admin/admin-in-progress/admin-in-progress.component.html
@@ -8,12 +8,11 @@
       </div>
       <div class="flex-item2">
         <div class="main">
-          <div id="text1"><a routerLink="/patient-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
+          <div id="text1"><a routerLink="/patient-dashboard"></a>In Progress</div>
           <div id="doctor-id">
             <app-input [ipConfig]="searchDoctorId"></app-input>
             <app-button id="search"[btnConfig]="searchBtnConfig2" [btntext]="'search'"></app-button>
             </div>
-          <div id="registered-doctors">In Progress</div>
           <div class="table-container">
             <table>
               <tr>
@@ -35,10 +34,8 @@
                   <app-button (onClick)="onClickEventReceived($event, doctor.id,'TO_BE_REGISTERED')"  [btntext]="'Deny'" [btnConfig]="textBtnConfig3"></app-button>
                 </td>
             </tr>
-
-            </table>
+          </table>
           </div>
-
         </div>
       </div>
     </div>
