--- a/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
+++ b/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
@@ -8,12 +8,11 @@
       </div>
       <div class="flex-item2">
         <div class="main">
-          <div id="text1"><a routerLink="/patient-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
+          <div id="text1"><a routerLink="/patient-dashboard"></a>To Be Registered Doctors</div>
           <div id="doctor-id">
             <app-input [ipConfig]="searchDoctorId"></app-input>
             <app-button  [btntext]="'Search'" id="search"[btnConfig]="searchBtnConfig1"></app-button>
             </div>
-          <div id="registered-doctors">To Be Registered Doctors</div>
           <div class="table-container">
             <table>
               <tr>
@@ -30,7 +29,6 @@
                 <td>{{doctor.qualification}}</td>
                 <td>{{doctor.speciality}}</td>
                 <td>{{doctor.phoneNo}}</td>
-                <!-- <td>{{todo.targetDate | date}}</td> -->
                 <td>
                   <app-button (onClick)="onClickEventReceived($event, doctor.id, 'IN_PROGRESS')" [btntext]="'Send'" [btnConfig]="textBtnConfig"></app-button>
                 </td>
