--- a/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.scss
@@ -30,9 +30,7 @@
         background: #FFFFFF;
         margin: auto;
         padding: 1em;
-        .tabs{
-            padding: 1em;
-        }
+       
         #text1 {
             font-family: "Montserrat";
             font-style: normal;
@@ -40,8 +38,8 @@
             font-size: 1em;
             line-height: 1.25em;
             color: #737373;
-            padding-top: 1.25em;
-            padding-left: 1.25em;
+            margin-bottom: 1em;
+            margin-left: 0.7em;
         }
        
 
@@ -54,21 +52,22 @@
             color: #2C2D2D;
 
         }
-
+        #tabs{
+            margin-left: 1em;
+        }
         .main-flex {
             display: flex;
             flex-direction: column;
-            gap: 1.5em;
-            .tabs{
-                padding: 1em;
-            }
+            gap: 1em;
+          
 
                 .inner-flex {
                     display: flex;
                     flex-direction: row;
                     gap: 1em;
                     height: 20%;
-
+                    margin-top: 1em;
+                    margin-left: 1em;
 
                     #cards {
                         background: #FFFFFF;
@@ -156,5 +155,5 @@
     height: 2.2em;
 }
 .tabs{
-    padding: 1em;
+    padding-left: 1em;
 }
