--- a/CHL-Frontend/src/app/components/doctor/doc-patient-past-records/doc-patient-past-records.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-past-records/doc-patient-past-records.component.html
@@ -8,7 +8,8 @@
       </div>
       <div class="flex-item2">
         <div class="main">
-          <div id="text1"><a routerLink="/patient-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
+          <div id="text1"><a style="text-decoration:none ; color: #737373;;"
+            [routerLink]="'/doctor-dashboard'">&lt; &nbsp; Back to Dashboard</a></div>
           <div class="tabs">
             <tab-navigation [tabs]="menus1"></tab-navigation>
         </div>
