--- a/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
+++ b/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
@@ -1,18 +1,18 @@
 <div class="main-container">
-    <div id="nav">
-      <app-navbar [button]="false" [name]="'Rohit Pandey'"></app-navbar>
+  <div id="nav">
+    <app-navbar [button]="false" [name]="'Rohit Pandey'"></app-navbar>
+  </div>
+  <div class="subcontainer">
+    <div class="flex-item1">
+      <app-sidebar [menus]="menus"></app-sidebar>
     </div>
-    <div class="subcontainer">
-      <div class="flex-item1">
-        <app-sidebar [menus]="menus"></app-sidebar>
-      </div>
-      <div class="flex-item2">
-        <div class="main">
-          <div id="text1"><a routerLink="/patient-dashboard"></a>To Be Registered Doctors</div>
-          <div id="doctor-id">
-            <app-input [ipConfig]="searchDoctorId"></app-input>
-            <app-button  [btntext]="'Search'" id="search"[btnConfig]="searchBtnConfig1"></app-button>
-            </div>
+    <div class="flex-item2">
+      <div class="main">
+        <div id="text1"><a routerLink="/patient-dashboard"></a>To Be Registered Doctors</div>
+        <div id="doctor-id">
+          <app-input [ipConfig]="searchDoctorId"></app-input>
+          <img src="assets/images/search.png" style="height: 2.5em;margin-left: 0.3em;">
+        </div>
           <div class="table-container">
             <table>
               <tr>
@@ -30,13 +30,29 @@
                 <td>{{doctor.speciality}}</td>
                 <td>{{doctor.phoneNo}}</td>
                 <td>
-                  <app-button (onClick)="onClickEventReceived($event, doctor.id, 'IN_PROGRESS')" [btntext]="'Send'" [btnConfig]="textBtnConfig"></app-button>
+                  <app-button (onClick)="onClickEventReceived($event, doctor.id, 'IN_PROGRESS')" [btntext]="'Send'"
+                    [btnConfig]="textBtnConfig"></app-button>
                 </td>
-            </tr>
-  
+              </tr>
+
             </table>
           </div>
-  
+          <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+            <div class="modal-content">
+              <div class="modal-body">
+                <div class="modal-footer">
+                  <br>
+                  <h4 class="modal-title">Sent Successfully!</h4>
+                  <div>
+                    <app-button [btntext]="'Close'" [btnConfig]="textBtnConfig" (click)="closePopup()">
+                    </app-button>
+                  </div>
+                </div>
+
+
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
