--- a/CHL-Frontend/src/app/components/doctor/add-medical-record/add-medical-record.component.html
+++ b/CHL-Frontend/src/app/components/doctor/add-medical-record/add-medical-record.component.html
@@ -9,7 +9,8 @@
         <div class="flex-item2">
             <div class="main">
                 <div class="search">
-                    <div id="text1"><a routerLink="/patient-dashboard"></a>&lt; &nbsp; Back to Dashboard</div>
+                    <div id="text1"><a style="text-decoration:none ; color: #737373;;"
+                            [routerLink]="'/doctor-dashboard'">&lt; &nbsp; Back to Dashboard</a></div>
                 </div>
                 <div class="tabs">
                     <tab-navigation [tabs]="menus1"></tab-navigation>
@@ -20,7 +21,10 @@
                             Add medical record/ prescription
                         </div>
                     </div>
-                    <div class="right"></div>
+                    <div class="right">
+                        <div id="text1"><a style="text-decoration:none ; color: #737373;;"
+                                [routerLink]="'/doctor/patient/past-records'">&lt; &nbsp; Previous Page</a></div>
+                    </div>
                 </div>
 
                 <div class="outline" id="contentToConvert">
@@ -37,25 +41,29 @@
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Patient ID:</label>
-                                    <app-input [userInput]="patient.id" [disabled]="'true'" [ipConfig]="idConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="patient.id" [disabled]="'true'" [ipConfig]="idConfig"
+                                        (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>First name:</label>
-                                    <app-input [userInput]="patient.firstname" [disabled]="'true'" [ipConfig]="nameConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="patient.firstname" [disabled]="'true'"
+                                        [ipConfig]="nameConfig" (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Last name:</label>
-                                    <app-input [userInput]="patient.lastname" [disabled]="'true'" [ipConfig]="nameConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="patient.lastname" [disabled]="'true'"
+                                        [ipConfig]="nameConfig" (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Age:</label>
-                                    <app-input [userInput]="patient.age" [disabled]="'true'" [ipConfig]="ageConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="patient.age" [disabled]="'true'" [ipConfig]="ageConfig"
+                                        (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
@@ -67,7 +75,9 @@
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Contact no:</label>
-                                    <app-input [userInput]="patient.phoneNo" [disabled]="'true'" [userInput]="patient.firstname" [disabled]="'true'" [ipConfig]="contactConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="patient.phoneNo" [disabled]="'true'"
+                                        [userInput]="patient.firstname" [disabled]="'true'" [ipConfig]="contactConfig"
+                                        (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                         </div>
@@ -86,13 +96,15 @@
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Docotr ID:</label>
-                                    <app-input [userInput]="doctor.id" [disabled]="'true'" [ipConfig]="idConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="doctor.id" [disabled]="'true'" [ipConfig]="idConfig"
+                                        (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Doctor name:</label>
-                                    <app-input [userInput]="doctor.doctorName" [disabled]="'true'" [ipConfig]="nameConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="doctor.doctorName" [disabled]="'true'"
+                                        [ipConfig]="nameConfig" (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
@@ -110,13 +122,15 @@
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Email:</label>
-                                    <app-input [userInput]="doctor.email" [disabled]="'true'" [ipConfig]="emailConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="doctor.email" [disabled]="'true'" [ipConfig]="emailConfig"
+                                        (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Contact no:</label>
-                                    <app-input [userInput]="doctor.phoneNo" [disabled]="'true'" [ipConfig]="contactConfig" (outputEmit)="''"></app-input>
+                                    <app-input [userInput]="doctor.phoneNo" [disabled]="'true'"
+                                        [ipConfig]="contactConfig" (outputEmit)="''"></app-input>
                                 </div>
                             </div>
                         </div>
@@ -147,7 +161,8 @@
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Severity:</label>
-                                    <app-input [ipConfig]="severityConfig" (outputEmit)="pastRecord.severity=$event"></app-input>
+                                    <app-input [ipConfig]="severityConfig" (outputEmit)="pastRecord.severity=$event">
+                                    </app-input>
                                 </div>
                             </div>
                         </div>
@@ -166,25 +181,29 @@
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Height:</label>
-                                    <app-input [ipConfig]="heightConfig" (outputEmit)="medicalData.height=$event"></app-input>
+                                    <app-input [ipConfig]="heightConfig" (outputEmit)="medicalData.height=$event">
+                                    </app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Weight:</label>
-                                    <app-input [ipConfig]="weightConfig" (outputEmit)="medicalData.weight=$event"></app-input>
+                                    <app-input [ipConfig]="weightConfig" (outputEmit)="medicalData.weight=$event">
+                                    </app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>BP:</label>
-                                    <app-input [ipConfig]="BPConfig" (outputEmit)="medicalData.bloodPressure=$event"></app-input>
+                                    <app-input [ipConfig]="BPConfig" (outputEmit)="medicalData.bloodPressure=$event">
+                                    </app-input>
                                 </div>
                             </div>
                             <div class="form-cell">
                                 <div class="cell">
                                     <label>Pulse:</label>
-                                    <app-input [ipConfig]="pulseConfig" (outputEmit)="medicalData.pulseRate=$event"></app-input>
+                                    <app-input [ipConfig]="pulseConfig" (outputEmit)="medicalData.pulseRate=$event">
+                                    </app-input>
                                 </div>
                             </div>
                         </div>
@@ -202,7 +221,8 @@
                         <div class="form-row-4">
                             <div class="form-cell">
                                 <div class="cell">
-                                    <app-input [ipConfig]="diagnosisConfig" (outputEmit)="pastRecord.diagnosis=$event"></app-input>
+                                    <app-input [ipConfig]="diagnosisConfig" (outputEmit)="pastRecord.diagnosis=$event">
+                                    </app-input>
                                 </div>
                             </div>
                         </div>
@@ -216,54 +236,54 @@
                         </div>
                         <div class="right">
                             <div>
-                                <app-button [btntext]="'Add medication'" [btnConfig]="textBtnConfig2" (click)="openPopup()"></app-button>
+                                <app-button [btntext]="'Add medication'" [btnConfig]="textBtnConfig2"
+                                    (click)="openPopup()"></app-button>
                             </div>
                             <!--Modal starts-->
-                        <div>
-                            <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
-                                <div class="modal-dialog modal-lg" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h4 class="modal-title">Add Current Medication</h4>
-                                        </div>
+                            <div>
+                                <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+                                    <div class="modal-dialog modal-lg" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Add Current Medication</h4>
+                                            </div>
 
-                                        <div class="modal-body">
-                                            <div class="flex-modal">
-                                                <div class="grid-item">
-                                                    <label>Medicine:</label>
-                                                    <app-input
-                                                        (outputEmit)="medicationData.medicine=$event"
-                                                        [ipConfig]="nameConfig">
-                                                    </app-input>
+                                            <div class="modal-body">
+                                                <div class="flex-modal">
+                                                    <div class="grid-item">
+                                                        <label>Medicine:</label>
+                                                        <app-input (outputEmit)="medicationData.medicine=$event"
+                                                            [ipConfig]="nameConfig">
+                                                        </app-input>
+                                                    </div>
+                                                    <div class="grid-item">
+                                                        <label>Dosage:</label>
+                                                        <app-input [ipConfig]="nameConfig"
+                                                            (outputEmit)="medicationData.dosage=$event">
+                                                        </app-input>
+                                                    </div>
+                                                    <div class="grid-item">
+                                                        <label>Starting date:</label>
+                                                        <app-input [ipConfig]="dateConfig"
+                                                            (outputEmit)="medicationData.startingDate=$event">
+                                                        </app-input>
+                                                    </div>
                                                 </div>
-                                                <div class="grid-item">
-                                                    <label>Dosage:</label>
-                                                    <app-input [ipConfig]="nameConfig"
-                                                        (outputEmit)="medicationData.dosage=$event">
-                                                    </app-input>
-                                                </div>
-                                                <div class="grid-item">
-                                                    <label>Starting date:</label>
-                                                    <app-input [ipConfig]="dateConfig"
-                                                        (outputEmit)="medicationData.startingDate=$event">
-                                                    </app-input>
-                                                </div>
+
+                                            </div>
+
+                                            <div class="modal-footer">
+                                                <app-button [btntext]="'Save'" [btnConfig]="textBtnConfig"
+                                                    (click)="submitNewMedication()"></app-button>
+                                                <app-button [btntext]="'Close'" [btnConfig]="textBtnConfig2"
+                                                    (click)="closePopup()"></app-button>
                                             </div>
 
                                         </div>
-
-                                        <div class="modal-footer">
-                                            <app-button [btntext]="'Save'" [btnConfig]="textBtnConfig"
-                                                (click)="submitNewMedication()"></app-button>
-                                            <app-button [btntext]="'Close'" [btnConfig]="textBtnConfig2"
-                                                (click)="closePopup()"></app-button>
-                                        </div>
-
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <!--Modal ends-->
+                            <!--Modal ends-->
                         </div>
                     </div>
                     <div class="outline-2">
@@ -284,7 +304,7 @@
                                         </td>
                                     </tr>
                                 </ng-container>
-        
+
                             </table>
                         </div>
                     </div>
@@ -316,6 +336,9 @@
                 <div class="submit-form">
                     <app-button [btntext]="'Submit'" [btnConfig]="textBtnConfig2" (click)="submit()"></app-button>
                 </div>
+                <br>
+
+                <br>
             </div>
         </div>
     </div>
