--- a/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-dashboard/doc-patient-dashboard.component.scss
@@ -63,12 +63,22 @@
 
                 .inner-flex {
                     display: flex;
-                    flex-direction: row;
+                    flex-direction: column;
                     gap: 1em;
-                    height: 20%;
                     margin-top: 1em;
                     margin-left: 1em;
+                    .graphs{
+                        display: flex;
+                        flex-direction: column;
 
+                    }
+                    .details{
+                        display: flex;
+                        flex-direction: row;
+                        gap: 2em;
+                        padding: 1em;
+                        padding-bottom: 0em;
+                        padding-top: 0em;
                     #cards {
                         background: #FFFFFF;
                         border: 0.1em solid #EAEBED;
@@ -76,14 +86,17 @@
                         padding: 0.2em;
                         display: flex;
                         width: 100%;
+                        // height: 6em;
                         flex-direction: row;
                         justify-content: space-between;
+                        padding: 0.5em;
+
 
 
                         p {
                             font-weight: 600;
-                            font-size: 0.9em;
-                            line-height: 1.1em;
+                            font-size: 1.2em;
+                            line-height: 1.2em;
                             color: #2C2D2D;
                         }
 
@@ -102,11 +115,9 @@
                         }
                     }
                 }
+            }
 
-                // .charts{
-                //     width: 100%;
-                //     height: 100%;
-                // }
+                
             }
         }
     }
