--- a/CHL-Frontend/src/app/components/doctor/doctor-profile/doctor-profile.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doctor-profile/doctor-profile.component.html
@@ -9,7 +9,8 @@
     </div>
     <div class="flex-item2">
       <div class="main">
-        <div id="text1"><a href="#"></a>&lt; &nbsp; Back to Dashboard</div>
+        <div id="text1"><a style="text-decoration:none ; color: #737373;;"
+          [routerLink]="'/doctor-dashboard'">&lt; &nbsp; Back to Dashboard</a></div>
         <div class="search-filter">
           <div class="left">
             <div id="sort-by">
