--- a/CHL-Frontend/src/app/components/graphs/area-graph/area-graph.component.html
+++ b/CHL-Frontend/src/app/components/graphs/area-graph/area-graph.component.html
@@ -1,5 +1,5 @@
 
-    <div align='center'>
+    <div align='center' style="width: 100%;height:22em">
         <ejs-chart style='display:block' align='center' id='bmi-chart-container' [title]='title' [primaryXAxis]='primaryXAxis' [primaryYAxis]='primaryYAxis'
             [tooltip]='tooltip' (load)='load($event)' [chartArea]='chartArea' [legendSettings]='legend'>
                  
