--- a/CHL-Frontend/src/app/components/graphs/bp-bar-graph/bp-bar-graph.component.html
+++ b/CHL-Frontend/src/app/components/graphs/bp-bar-graph/bp-bar-graph.component.html
@@ -1,18 +1,4 @@
-<!-- <div  style="width:100%; height:17em;">
-<ejs-chart style='display:block' align='center' id='bpchart-container' [title]='title'
-                    [primaryXAxis]='primaryXAxis' [primaryYAxis]='primaryYAxis' [tooltip]='tooltip'
-                    (load)='load($event)' [chartArea]='chartArea'  [legendSettings]='legend'>
-
-                    <e-series-collection  >
-                        <e-series [dataSource]='BP' type='MultiColoredArea' xName='date' [name]="'systolic'" yName='systolic' [marker]='circleMarker'  width=2 opacity=1  name='England'>
-                        </e-series>
-                        <e-series [dataSource]='BP' type='Line' xName='date' yName='diastolic'[marker]='circleMarker'  width=2 opacity=1>
-                        </e-series>
-                    </e-series-collection>
-                </ejs-chart>
-            </div> -->
-
-    <div align='center'>
+<div align='center' style="width: 100%;height:22em">
         <ejs-chart style='display:block' align='center' id='bpchart-container' [title]='title' [primaryXAxis]='primaryXAxis' [primaryYAxis]='primaryYAxis'
             [tooltip]='tooltip' (load)='load($event)' [chartArea]='chartArea' [legendSettings]='legend'>
                  
@@ -25,7 +11,7 @@
                 </e-series>
             </e-series-collection>
         </ejs-chart>
-    </div>
+</div>
 
 <style>
 #bpchart stop {
