--- a/CHL-Frontend/src/app/components/graphs/pulse-line-graph/pulse-line-graph.component.html
+++ b/CHL-Frontend/src/app/components/graphs/pulse-line-graph/pulse-line-graph.component.html
@@ -1,16 +1,4 @@
-<!-- <div  style="width:100%; height:17em;" >
-<ejs-chart  id="chart-container" style='display:block' align='center'  [title]='title'
-                    [primaryXAxis]='primaryXAxis' [primaryYAxis]='primaryYAxis' [tooltip]='tooltip'
-                    (load)='load($event)' [chartArea]='chartArea'  [legendSettings]='legend'>
-
-                    <e-series-collection>
-                        <e-series [dataSource]='pulseRate' type='Line' xName='date' yName='pulse' [marker]='circleMarker' width=2 opacity=1>
-                        </e-series>
-                    </e-series-collection>
-                </ejs-chart>
-            </div> -->
-
-    <div align='center'>
+<div align='center' style="width: 100%;height:22em">
         <ejs-chart style='display:block' align='center' id='pulse-chart-container' [title]='title' [primaryXAxis]='primaryXAxis' [primaryYAxis]='primaryYAxis'
             [tooltip]='tooltip' (load)='load($event)' [chartArea]='chartArea' [legendSettings]='legend'>
                  
@@ -21,8 +9,7 @@
                 </e-series>
             </e-series-collection>
         </ejs-chart>
-    </div>
-
+</div>
 <style>
 
 #spring stop {
