added session in all patient-comp

--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -4,7 +4,7 @@
     </div>
     <div id="sub-container">
         <div id=image-container>
-            <img src="assets/images/login_bg.png" alt="login-bg-image">
+            <img src="assets/images/login_bg.png" >
             <div id="main-text"><strong> Your Health Comes First</strong></div>
             <div id="moto-text">With Central Health Log you can manage your personal health reports effectively</div>
         </div>
