--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -12,7 +12,7 @@
     .subcontainer {
         width: 100%;
         height: 93%;
-        background-color: #e0f8fa;
+        background-color: #f5feff;
         display: flex;
         flex-direction: row;
 
