--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <div id="nav">
-    <app-navbar [button]="false" [name]="'patient.firstname'"></app-navbar>
+    <app-navbar [button]="false" [name]="patientName"></app-navbar>
   </div>
   <div class="subcontainer">
     <div class="flex-item1">
@@ -41,7 +41,7 @@
                     <div class="modal-header">
                       <h4 class="modal-title">Add past record</h4>
                     </div>
-                    
+
                     <div class="modal-body">
                       <div class="flex-modal">
                         <div class="grid-item">
@@ -87,12 +87,12 @@
                       </div>
 
                     </div>
-                  
+
                     <div class="modal-footer">
                       <app-button [btntext]="'Save'" [btnConfig]="textBtnConfig" (click)="submitNewPastRecord()"></app-button>
-                      <app-button [btntext]="'Close'" [btnConfig]="textBtnConfig2" (click)="closePopup()"></app-button>                     
+                      <app-button [btntext]="'Close'" [btnConfig]="textBtnConfig2" (click)="closePopup()"></app-button>
                     </div>
-                    
+
                   </div>
                 </div>
               </div>
