verify prescription added in login and registration page

--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -1,6 +1,6 @@
 <div id="main-container">
     <div id="nav">
-        <app-navbar [btntext]="'Register'"></app-navbar>
+        <app-navbar [verifyPrescription]="true" [btntext]="'Register'"></app-navbar>
     </div>
     <div id="sub-container">
         <div id=image-container>
