--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
@@ -1,6 +1,6 @@
 <div id="main-container">
     <div id="nav">
-        <app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
+        <app-navbar [verifyPrescription]="true" [button]="true" [btntext]="'Login'"></app-navbar>
     </div>
     <div id="sub-container">
         <div id="image-container">
