--- a/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-registration/patient-registration.component.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="cell">
                             <label for="contact">Contact Number </label>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="patient.phoneNo=$event"
+                            <app-input [ipConfig]="ipConfig1" (outputEmit)="patient.phoneNo=$event"
                                 (change)="onPhoneNo()"></app-input>
                             <div *ngIf="contactExists" class="userexists" style="color: red;">
                                 This number is already registered*
