--- a/CHL-Frontend/src/app/components/doctor/doc-patient-medical-data/doc-patient-medical-data.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doc-patient-medical-data/doc-patient-medical-data.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div id="nav">
-      <app-navbar [button]="false" [name]="'Dr Amit Tiwari'"></app-navbar>
+      <app-navbar [button]="false" [name]="doctorName"></app-navbar>
     </div>
     <div class="subcontainer">
       <div class="flex-item1">
