--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -25,7 +25,7 @@
                     <div class="form-group">
                         <div id="name">Username</div>
                         <app-input [ipConfig]="ipConfig" (outputEmit)="userName=($event)" (change)="onUser()"></app-input>
-                    <div *ngIf="(!usernameExists && patientActive) || (!docusernameExists && doctorActive)" style="color: red;">Username does not exists*</div>
+                    <div *ngIf="(!usernameExists && patientActive) || (!docusernameExists && doctorActive) || (!adminUsernameExists && adminActive)" style="color: red;">Username does not exists*</div>
                     </div>
 
                     <div class="form-group">
