--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div id="nav">
-        <app-navbar [button]="false" [name]="'Rohit Pandey'"></app-navbar>
+        <app-navbar [button]="false" [name]="patientName"></app-navbar>
     </div>
     <div class="subcontainer">
         <div class="flex-item1">
