--- a/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
+++ b/CHL-Frontend/src/app/components/admin/to-be-registered/to-be-registered.component.html
@@ -10,8 +10,8 @@
       <div class="main">
         <div id="text1"><a routerLink="/patient-dashboard"></a>To Be Registered Doctors</div>
         <div id="doctor-id">
-          <app-input [ipConfig]="searchDoctorId"></app-input>
-          <img src="assets/images/search.png" style="height: 2.5em;">
+          <app-input [ipConfig]="searchDoctorId" (outputEmit)="DocID=$event"></app-input>
+          <img src="assets/images/search.png" style="height: 2.5em;cursor: pointer;" (click)="searchDoc()">
         </div>
           <div class="table-container">
             <table>
