admin search doc done

--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -11,8 +11,7 @@
         *ngIf="verifyPrescription"
         [btntext]="'Verify Prescription'"
         [btnConfig]="textBtnConfig"
-        (onClick)="openPopup()"
-      >
+        (onClick)="openPopup()">
       </app-button>
     </div>
     <div>
