--- a/CHL-Frontend/src/app/common/navbar/navbar.component.scss
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.scss
@@ -1,10 +1,10 @@
 .navbar {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-template-rows: 1fr;
-  gap: 0em 0em;
-  grid-auto-flow: row;
-  grid-template-areas: ". .";
+  // display: grid;
+  // grid-template-columns: 3fr 1fr;
+  // grid-template-rows: 1fr;
+  // gap: 0em 0em;
+  // grid-auto-flow: row;
+  // grid-template-areas: ". .";
 
   background-color: #fff;
   width: 100%;
